[tool.poetry]
name = "pyswmap"
version = "0.1.0"
description = "Creates MAP-T Addressing"
authors = ["ejordangottlieb", "byrn-baker"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
